<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Invitation Pro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="smart_invitation">Smart Invitation</string>
    <string name="wedding">Wedding</string>
    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="engagement">Engagement</string>
    <string name="festival">Festival</string>
    <string name="party">Party</string>
    <string name="about_company">About Company</string>  
    <string name="about_Product">About Product</string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>
  
    <string name="company_desc">MobiRizer is a global company creating entertaining games and application for mobiles.We provide specialized service for mobile application development in iPhone, Android, J2ME, Windows and Symbian, native as well as hybrid, in enterprise product development, mobile web development, software testing and games development.</string>
    <string name="product_desc">Smart Invitation App is a modern way to send invitations to your friends and relatives.Where user get almost 6 category of celebrations.And each category will have 15 Card Designs. User can edit them by adding text and cute stickers in it.Its a very user friendly app which does not make user confuse.</string>
        
    <string name="version">Version:1.2</string>  
    <string name="dev_by">Developed By Mobirizer</string>
    <string name="all_rights">All Rights Reserved</string>

</resources>
