<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/l_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

        <RelativeLayout
        android:id="@+id/ttl"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:background="#ff3d62" >

        <TextView
            android:id="@+id/abt_comp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/about_company"
            android:textColor="#ffffff"
            android:textSize="30dp" />
     </RelativeLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ttl"
        android:orientation="vertical" >
        
        <ImageView 
            android:id="@+id/icon"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
           android:background="@drawable/icon"/>

        <TextView
            android:id="@+id/smart_invi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/smart_invitation"
            android:textColor="#ff3962"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/company_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textSize="15sp"
             android:padding="1dp"
             android:layout_marginRight="30dp"
             android:layout_marginLeft="40dp"
            android:textColor="#ff3962"
            android:text="@string/company_desc"/>
        </LinearLayout>
     
     
     <LinearLayout
        android:id="@+id/layoutV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
    
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:gravity="center_horizontal|bottom"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:textSize="10dp"
             android:textColor="#393939"
            android:text="@string/version"/>
        <TextView
            android:id="@+id/develop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:textSize="10dp"
            android:layout_gravity="center"
            android:textColor="#393939"
            android:text="@string/dev_by"/>
        <TextView
            android:id="@+id/rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:textSize="10dp"
            android:layout_gravity="center"
            android:textColor="#393939"
            android:text="@string/all_rights"/>
        </LinearLayout> 
        
</RelativeLayout>