<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:background="#ff3d62" >

        <TextView
            android:id="@+id/feedback"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/feedback"
            android:textColor="#ffffff"
            android:textSize="30dp" />

 </RelativeLayout>
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <EditText 
            android:id="@+id/feedb"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="90dp"
            android:layout_marginLeft="90dp"
            android:textSize="12sp"
            android:textColor="#393939"
            android:hint="please give your feedback here.."
            android:background="#ffffff"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:background="#ff3d62"
            android:textSize="25sp" />
     </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="120dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:gravity="center_horizontal|bottom"
             android:layout_marginTop="95dp"
             android:layout_gravity="center"
             android:textSize="15dp"
             android:textColor="#393939"
            android:text="@string/version"/>
        <TextView
            android:id="@+id/develop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:textColor="#393939"
            android:text="@string/dev_by"/>
        <TextView
            android:id="@+id/rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:layout_marginBottom="1dp"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:textColor="#393939"
            android:text="@string/all_rights"/>
        </LinearLayout>
 </LinearLayout>